<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/edt_distancia"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:inputType="numberDecimal"
        android:hint="@string/distancia" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:text="@string/total_quilometros"
        android:gravity="center"/>

    <EditText
        android:id="@+id/edt_preco"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:inputType="numberDecimal"
        android:hint="@string/preco" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:text="@string/preco_litro"
        android:gravity="center"/>

    <EditText
        android:id="@+id/edt_autonomia"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:inputType="numberDecimal"
        android:hint="@string/autonomia" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:text="@string/kms_por_litro"
        android:gravity="center"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/gasto_total"
        android:textAllCaps="true"
        android:layout_marginTop="42dp"
        android:textSize="20sp"
        android:gravity="center"/>

    <TextView
        android:id="@+id/tv_valortotal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/valor_total"
        android:textAllCaps="true"
        android:layout_marginTop="16dp"
        android:textSize="38sp"
        android:textColor="@color/blue"
        android:gravity="center"/>
    
    <Button
        android:id="@+id/btn_calcular"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:layout_marginTop="16dp"
        android:textSize="18sp"
        android:backgroundTint="@color/teal_700"
        android:text="@string/calcular"/>

</LinearLayout>